# tables

./: Cargo.toml  LICENSE  README
app/: Cargo.toml
app/assets/inputs/: demo.tables
app/src/: file_reader.rs  tables.html
assets/inputs/: demo.tables
assets/outputs/: output.html
front/: package-lock.json  package.json
front/public/: global.css  index.html
front/src/: Animations.svelte  App.svelte  Card.svelte  DragBoard.svelte  Draggable.svelte  Header.svelte  Home.svelte  ImageList.svelte
src/: file_reader.rs  main.rs  styles.css  tables.html
