[package]
name = "tables"
version = "1.0.0"
authors = ["Pablo Tato Ramos <pabtatoramos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
tinytemplate = "1.0"
web-view = "0.6"
nfd = { git = "https://github.com/saurvs/nfd-rs.git" }